<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_info"
        android:drawablePadding="10dp"
        android:text="Store Info"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/storeInfo_txtPlatform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:drawableStartCompat="@drawable/ic_store"
        android:drawablePadding="5dp"
        android:text="@string/platform" />
    <TextView
        android:id="@+id/storeInfo_txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/store_name" />
    <TextView
        android:id="@+id/storeInfo_txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="Store ID/Username"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/storeInfo_txtAddedOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:text="@string/added_on"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/storeInfo_txtLastEditedOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:text="@string/last_edited_on"
        tools:ignore="hardcodedText" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/storeInfo_btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/delete" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/storeInfo_btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/middle_yellow"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/edit" />
    </LinearLayout>
</LinearLayout>