<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="10dp"
        android:text="Supplier Info" />
    <TextView
        android:id="@+id/supplierInfo_txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/supplier_id" />
    <TextView
        android:id="@+id/supplierInfo_txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:text="Supplier Name"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/supplierInfo_txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:text="Jl. ABDCDEFGHIJKLMNOPQRSTUVWXYZ Gg. abcdefghijklmnopqrstuvwxyz"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/supplierInfo_txtPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        app:drawableStartCompat="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:text="Jl. ABDCDEFGHIJKLMNOPQRSTUVWXYZ Gg. abcdefghijklmnopqrstuvwxyz"
        tools:ignore="hardcodedText" />
    <TextView
        android:id="@+id/supplierInfo_txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        app:drawableStartCompat="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:text="Jl. ABDCDEFGHIJKLMNOPQRSTUVWXYZ Gg. abcdefghijklmnopqrstuvwxyz"
        tools:ignore="hardcodedText" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/supplierInfo_btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/delete" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/supplierInfo_btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/middle_yellow"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/edit" />
    </LinearLayout>
</LinearLayout>